python-cliff (1.15.0-3) unstable; urgency=medium

  * Removed argparse from requirements.txt (Closes: #810126).
  * Added patch to fix Python 3.5 unit tests.

 -- Thomas Goirand <zigo@debian.org>  Sat, 06 Feb 2016 10:30:41 +0000

python-cliff (1.15.0-2) unstable; urgency=medium

  * Added missing build-depends on python{3,}-yaml.

 -- Thomas Goirand <zigo@debian.org>  Fri, 20 Nov 2015 16:13:06 +0100

python-cliff (1.15.0-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Moved the package to PKG OpenStack as I lost write access to the DPMT.
  * Added build-depends openstack-pkg-tools.
  * Added export OSLO_PACKAGE_VERSION.

 -- Thomas Goirand <zigo@debian.org>  Thu, 15 Oct 2015 23:12:13 +0000

python-cliff (1.14.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Removed skip-test.patch now useless.

 -- Thomas Goirand <zigo@debian.org>  Wed, 02 Sep 2015 19:31:14 +0000

python-cliff (1.13.0-1) experimental; urgency=medium

  [ Thomas Goirand ]
  * Updated debian/copyright.

  [ Corey Bryant ]
  * New upstream release:
    - d/control: Align (Build-)Depends with upstream.
    - d/p/skip-tests.patch: Skip failing test.

  [ James Page ]
  * Update watch file to use Debian pypi redirector.

 -- Thomas Goirand <zigo@debian.org>  Tue, 14 Jul 2015 21:18:51 +0000

python-cliff (1.10.1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed calls of nose.
  * Also testing with nose and python3.
  * Standards-Version is now 3.9.6.

 -- Thomas Goirand <zigo@debian.org>  Wed, 15 Apr 2015 14:57:33 +0000

python-cliff (1.7.0-2) unstable; urgency=medium

  * debian/control: add versions python{,3}-six and python{,3}-
    prettytable Depends (Closes: #752741)

 -- Jan Dittberner <jandd@debian.org>  Sun, 28 Sep 2014 19:42:33 +0200

python-cliff (1.7.0-1) unstable; urgency=medium

  * New upstream version

 -- Jan Dittberner <jandd@debian.org>  Sun, 28 Sep 2014 18:06:55 +0200
